--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>{{title}}</h1>
+<div style="font-size: 10px">
+  Originally designed by <a href="https://forum.nostalrius.org/memberlist.php?mode=viewprofile&u=38096/">henkebenke</a>
+</div>
+<div class="topText">
+  <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br/>
+  <div class="block_container" style="margin-bottom: 20px">
+    <div> Server time is now:</div>
 
+    <app-servertime></app-servertime>
+  </div>
+  <app-boss></app-boss>
+
+  <div class="block_container" style="margin-bottom: 20px">
+    <b style="font-weight: bold; margin-right: 7px;">Current ZG Edge of Madness boss:</b>
+    <div id="boss"></div>
+  </div>
+
+
+  <a href="/zgenchants">Click here for ZG enchants</a>
+</div>
 <app-event></app-event>
