--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,27 +1,45 @@
-<p>event works!</p>
-
-<!--<ul>-->
-<!--  @for (event of events; track event.id) {-->
-<!--    <li>{{ event.old }}</li>-->
-<!--  }-->
-<!--</ul>-->
-<div style="font-size: 10px">
-  Originally designed by <a href="https://forum.nostalrius.org/memberlist.php?mode=viewprofile&u=38096/">henkebenke</a>
-</div>
-<div class="topText">
-  <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br/>
-  <div class="block_container" style="margin-bottom: 20px">
-    <div> Server time is now:</div>
-
-    <app-servertime></app-servertime>
-  </div>
-  <app-boss></app-boss>
-
-  <div class="block_container" style="margin-bottom: 20px">
-    <b style="font-weight: bold; margin-right: 7px;">Current ZG Edge of Madness boss:</b>
-    <div id="boss"></div>
-  </div>
-
-
-  <a href="/zgenchants">Click here for ZG enchants</a>
-</div>
+<ul>
+  @for (event of events; track event.id) {
+    <div [ngClass]="event.old ? 'row old' : 'row' ">
+      <div class="date">
+        {{ event.date }}
+      </div>
+      <div class="dot"></div>
+      <div class="trail"></div>
+      @if (event.ony || event.mc || event.bwl || event.aq40 || event.naxx || event.zg || event.aq20 || event.dmf || event.pvp || event.madness) {
+        <div class="subject">
+          @if (event.ony) {
+            Onyxia<br>
+          }
+          @if (event.mc) {
+            Molten Core<br>
+          }
+          @if (event.bwl) {
+            Blackwing Lair<br>
+          }
+          @if (event.aq40) {
+            AQ40<br>
+          }
+          @if (event.naxx) {
+            Naxxramas<br>
+          }
+          @if (event.zg) {
+            Zul'Gurub<br>
+          }
+          @if (event.aq20) {
+            AQ20<br>
+          }
+          @if (event.dmf) {
+            {{ event.dmf }}<br>
+          }
+          @if (event.pvp) {
+            {{ event.pvp }}<br>(not sure about exact time)
+          }
+          @if (event.madness) {
+            ZG Edge of Madness: {{ event.madnessBoss }}<br>(not sure about exact time)
+          }
+        </div>
+      }
+    </div>
+  }
+</ul>
