--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 <div style="font-size: 10px">
-  Originally designed by <a
-  href="https://forum.nostalrius.org/memberlist.php?mode=viewprofile&u=38096/">henkebenke</a>
 </div>
 <div class="topText">
   <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br/>
@@ -16,7 +14,8 @@
   </div>
 
 
-  <a href="" routerLink="/zgenchants"  routerLinkActive="active" ariaCurrentWhenActive="page">Click here for
+  <a mat-button href="" routerLink="/zgenchants" routerLinkActive="active" ariaCurrentWhenActive="page"
+     class="linkButton">Click here for
     ZG enchants</a>
 
 </div>
