--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,6 +5,17 @@
   justify-content: center;
   align-items: center;
 }
+a.linkButton{
+  //background-color: red;
+  color: #8d8d8d;
+  //background-color: unset;
+}
+.linkButton::ng-deep {
+  .mat-mdc-button-ripple,
+  .mdc-button__ripple {
+    display: none !important;
+  }
+}
 
 .topText {
   margin-top: 10px;
