--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,15 +9,31 @@ $NgEverlook-Calendar-accent: mat.define-palette(mat.$blue-palette, A200, A100, A
 $NgEverlook-Calendar-warn: mat.define-palette(mat.$red-palette);
 
 
-$NgEverlook-Calendar-theme: mat.define-light-theme((
+$light-theme: mat.define-light-theme((
   color: (
     primary: $NgEverlook-Calendar-primary,
     accent: $NgEverlook-Calendar-accent,
     warn: $NgEverlook-Calendar-warn,
   ),
-  typography: mat.define-typography-config(),
-  density: 0
+  //typography: mat.define-typography-config(),
+  //density: 0
 ));
+
+
+// Dark Theme
+$dark-theme-primary: mat.define-palette(mat.$indigo-palette);
+$dark-theme-accent: mat.define-palette(mat.$purple-palette, A200, A100, A400);
+$dark-theme-warn: mat.define-palette(mat.$red-palette);
+
+$dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $dark-theme-primary,
+    accent: $dark-theme-accent,
+    warn: $dark-theme-warn,
+  ),
+  //typography: mat.define-typography-config(),
+));
+
 
 // Create a mixin that applies theme colors to your .dot class.
 @mixin custom-dot-theme($theme) {
@@ -28,8 +44,93 @@ $NgEverlook-Calendar-theme: mat.define-light-theme((
   }
 }
 
+// Dark theme variables
+$dark-bg-color: #222;
+$semi-dark-bg-color: #333;
+$light-text-color: #cacaca;
+
+// Light theme variables
+$light-bg-color: #d2d2d2;
+$semi-light-bg-color: rgba(192, 192, 192, 0);
+$dark-text-color: #181818;
+
+// custom colors for Dark mode
+.dark {
+  @include mat.all-component-colors($dark-theme);
+  //
+  background-color: $semi-dark-bg-color;
+  color: $light-text-color;
+
+  .subject {
+    background-color: #212121;
+  }
+
+  .old:not(.new) .subject {
+    background: #3b3b3b;
+    color: #737373
+  }
+
+  .old .date {
+    color: #737373;
+  }
+
+  .mat-mdc-icon-button {
+    color: #cacaca;
+  }
+
+  .trail {
+    background: #a8a8a8;
+  }
+
+  .old .trail {
+    background: #414141;
+  }
+
+  .dot {
+    background: #a8a8a8;
+  }
+
+  .old .dot {
+    background: #414141;
+  }
+
+  .first .dot:not(.old .dot):before {
+    background: #c7c7c7;
+  }
+}
+
+// custom colors for Light mode
+.light {
+  @include mat.all-component-themes($light-theme);
+  background-color: $semi-light-bg-color;
+  color: $dark-text-color;
+
+  .mat-mdc-icon-button {
+    color: #494949;
+  }
+
+  .trail {
+    background: #000;
+  }
+
+  .old .trail {
+    background: #ccc;
+  }
+
+  .dot {
+    background: #494949;
+  }
+
+  .old .dot {
+    background: #b7b7b7;
+  }
+
+  .first .dot:not(.old .dot):before {
+    background: #494949;
+  }
+}
 
 // Include the mixin to apply the styles.
-@include custom-dot-theme($NgEverlook-Calendar-theme);
-@include mat.all-component-themes($NgEverlook-Calendar-theme);
+@include custom-dot-theme($light-theme);
+//@include mat.all-component-themes($light-theme);
 
