--- a/src/app/enchant/enchant.component.html
+++ b/src/app/enchant/enchant.component.html
@@ -1,65 +1,83 @@
-<div style="margin: 20px auto; width: 500px;">
+<div [ngClass]="themeService.themeSignal()" class="enchantholder">
+  <div class="topText">
 
-  This is what you need for the head/legs enchants in ZG.<br>
-  <br>
-  <b>Proof:</b><br>
-  <a href="https://i.imgur.com/d97KSTY.jpg">https://i.imgur.com/d97KSTY.jpg</a><br>
-  <a href="https://i.gyazo.com/159cb8acc809c40637a35ab9f87a56b0.png">https://i.gyazo.com/159cb8acc809c40637a35ab9f87a56b0.png</a>
-  <br><br>
-  You get the enchant from the guy atop the pyramid in ZG.<br>
-  <br>
+    This is what you need for the head/legs enchants in ZG.<br>
+    <br>
+    <b>Proof:</b><br>
+    <a href="https://i.imgur.com/d97KSTY.jpg">https://i.imgur.com/d97KSTY.jpg</a><br>
+    <a href="https://i.gyazo.com/159cb8acc809c40637a35ab9f87a56b0.png">https://i.gyazo.com/159cb8acc809c40637a35ab9f87a56b0.png</a>
 
-  <b>Druid: Animist's Caress</b><br>
-  - Arcanum of Protection<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Bindings<br>
-  Effect: +10 stamina, +10 intelligence, +24 healing<br>
-  <br>
-  <b>Hunters: Falcon's Call</b><br>
-  - Arcanum or Rapidity<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Stanchion<br>
-  Effect: +24 Ranged Attack Power, +10 stamina, +1% hit<br>
-  <br>
-  <b>Paladins: Syncretist's Sigil</b><br>
-  - Arcanum of Protection<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Shawl<br>
-  Effect: +10 stamina, +7 defense, +24 healing<br>
-  <br>
-  <b>Priest: Prophetic Aura</b><br>
-  - Arcanum of Focus<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Tabard<br>
-  Effect: +10 stamina, +4 MP5, +24 healing<br>
-  <br>
-  <b>Mages: Presence of Sight</b><br>
-  - Arcanum of Focus<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Girdle<br>
-  Effect: +18 spelldmg, +1% spellhit<br>
-  <br>
-  <b>Rogues: Death's Embrace</b><br>
-  - Arcanum of Rapidity<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Kossack<br>
-  Effect: +28 Attack Power, +1% dodge<br>
-  <br>
-  <b>Warlock: Hoodoo Hex</b><br>
-  - Arcanum of Focus<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Armsplint<br>
-  Effect: +10 stamina, +18 spelldmg<br>
-  <br>
-  <b>Warrior: Presence of Might</b><br>
-  - Arcanum of Protection<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Aegis<br>
-  Effect: +10 stamina, +7 defense, +15 Shield Block<br>
-  <br>
-  <b>Shaman: Vodouisant’s Vigilant Embrace</b><br>
-  - Arcanum of Focus<br>
-  - Punctured Vodoo Doll<br>
-  - Primal Hakkari Sash<br>
-  Effect: +15 intelligence, +13 healing
+    <h3>You get the enchant from the guy atop the pyramid in ZG.</h3>
+  </div>
+  <div class="subject">
+    <b>Druid: Animist's Caress</b><br>
+    - Arcanum of Protection<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Bindings<br>
+    Effect: +10 stamina, +10 intelligence, +24 healing<br>
+  </div>
+
+  <div class="subject">
+    <b>Hunters: Falcon's Call</b><br>
+    - Arcanum or Rapidity<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Stanchion<br>
+    Effect: +24 Ranged Attack Power, +10 stamina, +1% hit<br>
+  </div>
+
+  <div class="subject">
+    <b>Paladins: Syncretist's Sigil</b><br>
+    - Arcanum of Protection<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Shawl<br>
+    Effect: +10 stamina, +7 defense, +24 healing<br>
+  </div>
+
+  <div class="subject">
+    <b>Priest: Prophetic Aura</b><br>
+    - Arcanum of Focus<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Tabard<br>
+    Effect: +10 stamina, +4 MP5, +24 healing<br>
+  </div>
+
+  <div class="subject">
+    <b>Mages: Presence of Sight</b><br>
+    - Arcanum of Focus<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Girdle<br>
+    Effect: +18 spelldmg, +1% spellhit<br>
+  </div>
+
+  <div class="subject">
+    <b>Rogues: Death's Embrace</b><br>
+    - Arcanum of Rapidity<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Kossack<br>
+    Effect: +28 Attack Power, +1% dodge<br>
+  </div>
+
+  <div class="subject">
+    <b>Warlock: Hoodoo Hex</b><br>
+    - Arcanum of Focus<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Armsplint<br>
+    Effect: +10 stamina, +18 spelldmg<br>
+  </div>
+
+  <div class="subject">
+    <b>Warrior: Presence of Might</b><br>
+    - Arcanum of Protection<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Aegis<br>
+    Effect: +10 stamina, +7 defense, +15 Shield Block<br>
+  </div>
+
+  <div class="subject">
+    <b>Shaman: Vodouisant’s Vigilant Embrace</b><br>
+    - Arcanum of Focus<br>
+    - Punctured Vodoo Doll<br>
+    - Primal Hakkari Sash<br>
+    Effect: +15 intelligence, +13 healing
+  </div>
 </div>
