--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -49,18 +49,6 @@
   height: calc(100% - 23px);
 }
 
-//.old {
-//  color: #ccc;
-//}
-
-.old .dot {
-  //border-color: #ccc;
-  //background-color: #ccc;
-}
-
-//.old .trail {
-//  background: #ccc;
-//}
 
 .row {
   position: relative;
@@ -87,17 +75,16 @@
   box-shadow: 5px 10px 20px 0 rgba(10, 53, 70, .1);
   z-index: 2;
   left: 30px;
-
 }
 
 .old:not(.new) .subject {
   //background: #f1f1f1;
 }
 
-body {
-  font-family: sans-serif;
-  line-height: 130%;
-}
+//body {
+//  font-family: sans-serif;
+//  line-height: 130%;
+//}
 
 b {
   font-weight: bold;
