Add login page light ui

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -112,7 +112,7 @@ a.linkButton {
   width: 250vw;
   height: 350vw;
   border-radius: 50%;
-  background-color: #333;
+  background-color: #2d2d2d;
   transition: 500ms ease-in-out;
   display: flex;
   z-index: -1;
