--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <!--  Settings and dark mode buttons-->
   <div class="button-container">
-    <button mat-icon-button class="settings">
+    <button mat-icon-button routerLink="/login" class="settings">
       <mat-icon>settings</mat-icon>
     </button>
     <button mat-icon-button (click)="toggleTheme()">
