Update to NG18 and change theme values

--- a/src/app/enchant/enchant.component.scss
+++ b/src/app/enchant/enchant.component.scss
@@ -18,6 +18,8 @@ a{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap-reverse;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .topText {
   margin-top: 10px;
