--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,8 +16,7 @@
              [type]="hide ? 'password' : 'text'">
     </mat-form-field>
     <div class="loginHolder">
-      <button mat-button class="loginBtn">Log in</button>
-
+      <button mat-button [disableRipple]="false" class="loginBtn">Log in</button>
     </div>
   </form>
 </div>
