--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,10 +1,10 @@
 .majorLogin {
+  min-inline-size: fit-content;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   height: -webkit-fill-available;
   justify-content: center;
-  scale: 1.1;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 form {
@@ -12,6 +12,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 300px;
+  align-self: center;
 }
 
 
@@ -41,15 +42,10 @@ form {
   .mat-input-element {
     color: white;
   }
-
-  .mat-mdc-unelevated-button .mat-mdc-button-touch-target {
-    background-color: #494949;
-  }
-
 }
 
 .mat-label {
-  color: rgba(243, 8, 100, 0.4);
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .visBtn {
@@ -75,8 +71,7 @@ input[type=password]::-ms-clear {
   top: 25px;
 }
 
+// scale up login button
 .loginBtn {
-  //background-color: rgba(234, 234, 234, 0.46);
-  border-radius: 20px;
-  scale: 1.4;
+  scale: 1.3;
 }
