--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -34,10 +34,6 @@ form {
     background-clip: text;
   }
 
-  // placeholder text color
-  .mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
-    color: rgba(49, 49, 49, 0.8);
-  }
 
   .mat-input-element {
     color: white;
@@ -73,5 +69,23 @@ input[type=password]::-ms-clear {
 
 // scale up login button
 .loginBtn {
-  scale: 1.3;
+  scale: 1.1;
+  background-color: rgba(241, 241, 241, 0.73);
+  //width: 50%;
+}
+.otherLinks{
+  margin-top: 45px;
+  text-align: center;
+a{
+  padding: 5px;
+  color: #13143166;
+  text-decoration: none;
+  cursor:pointer;
+  font-size: 15px;
+
+}
+  a:hover{
+    //color: red;
+    text-decoration: underline;
+  }
 }
