--- a/src/styles.scss
+++ b/src/styles.scss
@@ -274,7 +274,9 @@ $dark-text-color: #181818;
     -webkit-text-fill-color: #ffffff;
   }
 
-
+  a{
+    color: #4d4d4d;
+  }
 }
 
 
@@ -375,4 +377,7 @@ $dark-text-color: #181818;
     color: rgba(128, 128, 128, 0.8);
   }
 
+  a{
+    color: #13143166;
+  }
 }
