--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -4,6 +4,7 @@
   <mat-form-field>
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker"
+           [min]="minDate"
            (dateInput)="dateChange($event)"
            (dateChange)="dateChange($event)" [disabled]="!configAccess">
     <mat-hint>MM/DD/YYYY</mat-hint>
