--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -1,15 +1,14 @@
 .configPage {
   min-inline-size: fit-content;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap-reverse;
   height: -webkit-fill-available;
   justify-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  flex-direction: column;
-  align-items: center;
 }
 .mat-mdc-form-field{
   width: 300px;
+  align-self: center;
 }
 
 //::ng-deep {
@@ -17,8 +16,34 @@
 //    background-color: red;
 //  }
 //}
-.saveBtn{
-  scale: 1.1;
-  margin-top: 100px;
-  width: 70px;
+.saveBtn:disabled{
+  //background-color: rgba(119, 119, 119, 0.11);
+  //scale: 1.1;
+  //width: 120%;
+  //margin-top: 100px;
+  //width: 70px;
+}
+
+.button-container-config {
+  display: flex;
+  position: absolute;
+  //right: 0;
+  top: 0;
+  gap: 10px;
+  justify-content: end;
+  margin: 0;
+  padding: 10px 20px 0 0;
+  //width: -webkit-fill-available;
+}
+.mat-icon {
+  scale: 1.5
+}
+// div that contains save button
+.saveHolder {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: 25px;
 }
