--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,10 @@
 
   <!--  Settings and dark mode buttons-->
   <div class="button-container">
-    <button mat-icon-button routerLink="/login" class="settings">
+    <button [matTooltip]="configTip" mat-icon-button routerLink="/login" class="settings">
       <mat-icon>settings</mat-icon>
     </button>
-    <button mat-icon-button (click)="toggleTheme()">
+    <button [matTooltip]="themeModTip" mat-icon-button (click)="toggleTheme()">
       <mat-icon>dark_mode</mat-icon>
     </button>
   </div>
