--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -27,13 +27,16 @@
 .button-container-config {
   display: flex;
   position: absolute;
-  //right: 0;
   top: 0;
   gap: 10px;
   justify-content: end;
-  margin: 0;
-  padding: 10px 20px 0 0;
-  //width: -webkit-fill-available;
+  padding: 0 20px 0 0;
+  align-items: center;
+  margin: 10px 0 0;
+  flex-direction: row-reverse;
+  font-size: larger;
+  font-weight: bold;
+  color: #494949;
 }
 .mat-icon {
   scale: 1.5
@@ -46,4 +49,19 @@
   align-items: center;
   position: relative;
   top: 25px;
+}
+
+.mailButton{
+  border-radius: 14px;
+  padding: 6px;
+  //background: #f5f5f5;
+}
+span {
+  height: 24px;
+  width: 2.3px;
+  background-color: #494949;
+  border-radius: 100px;
+}
+.settingsButton{
+scale: 0.8;
 }
