Add better autologin and fix authguard

--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -2,7 +2,7 @@
 
   <!--  Settings and dark mode buttons-->
   <div class="button-container-config">
-    <button [matTooltip]="exitTip" mat-icon-button (click)="logout()" class="settingsButton">
+    <button [matTooltip]="exitTip" mat-icon-button (click)="logout()" class="exitButton">
       <mat-icon>logout</mat-icon>
     </button>
     <div [matTooltip]="roleTip" mat-icon-button class="mailButton">
