--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -34,13 +34,13 @@
   align-items: center;
   margin: 10px 0 0;
   flex-direction: row-reverse;
-  font-size: larger;
-  font-weight: bold;
-  color: #494949;
+  font-size: large;
+  //font-weight: bold;
+  color: #808080;
 }
-.mat-icon {
-  scale: 1.5
-}
+//.mat-icon {
+//  scale: 1.5
+//}
 // div that contains save button
 .saveHolder {
   align-self: center;
@@ -57,11 +57,11 @@
   //background: #f5f5f5;
 }
 span {
-  height: 24px;
+  height: 14px;
   width: 2.3px;
-  background-color: #494949;
+  background-color: #808080;
   border-radius: 100px;
 }
-.settingsButton{
-scale: 0.8;
+.exitButton{
+//scale: 0.8;
 }
